// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TabContent active hide inactive tabs by CSS: Component: TabContent => active => hide inactive tabContent by CSS 1`] = `
<div
  className="tab-pane active"
>
  <p>
    This is content
  </p>
</div>
`;

exports[`Component: TabContent active hide inactive tabs by excluding from dom: Component: TabContent => active => hide inactive tabContent by excluding from dom 1`] = `
<div
  className="tab-pane active"
>
  <p>
    This is content
  </p>
</div>
`;

exports[`Component: TabContent not active hide inactive tabs by CSS: Component: TabContent => inactive => hide inactive tabContent by CSS 1`] = `
<div
  className="tab-pane"
>
  <p>
    This is content
  </p>
</div>
`;
